--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.1"
+    // add others if needed
+  }
+}
+
   }
 }
