--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.1"
-
+    "body-parser": "^1.20.2"
+"axios": "^1.3.5"
 
   }
 }
